# talent-arena-2026

./: .env.example  .gitignore  01_Market_Intelligence_Agent.ipynb  02_Tech_Trend_Discovery_Agent.ipynb  03_Crypto_Portfolio_Visualizer.ipynb  Makefile  README.md  lab.py  mcp_agent.py  mcp_server.py  mcp_servers.py  mcp_workshop_stdio.ipynb  mcpagentDef.py  pyproject.toml  requirements.txt  run_mcp_server.py  session_1_agent_optimization.py  stdio_mcp_client.py  test_lab.py  test_tools.py  utils.py
files/: customer_summary.txt  incident_log.txt  inventory_alert.txt  product_feedback.txt  q4_report.txt  sales_forecast.txt
notebooks/: 01_Market_Intelligence_Agent.ipynb  02_Tech_Trend_Discovery_Agent.ipynb  workshop.ipynb
