[project]
name = "talent-arena-2026"
version = "0.1.0"
description = "Sage Talent Arena 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "bs4>=0.0.2",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "freeflow-llm>=0.1.3",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "yfinance>=1.1.0",
]
